# star-tape

./: .gitignore  CMakeLists.txt  README.md  star-tape.cbp  star_tape.hpp  tape_archive.cpp  tape_archive.hpp  tape_chunk.hpp  tape_config.hpp  tape_convenience.cpp  tape_convenience.hpp  tape_core.hpp  tape_entry.cpp  tape_entry.hpp  tape_file_proxy.cpp  tape_file_proxy.hpp  tape_fwd.hpp  tape_header.cpp  tape_header.hpp  tape_index.cpp  tape_index.hpp  tape_io.hpp  tape_io_base.hpp  tape_operation.cpp  tape_operation.hpp  tape_reader.hpp  tape_utility.hpp  tape_writer.cpp  tape_writer.hpp
include/star-tape/: star_tape.hpp  tape_archive.hpp  tape_convenience.hpp  tape_core.hpp  tape_entry.hpp  tape_file_proxy.hpp  tape_fwd.hpp  tape_header.hpp  tape_index.hpp  tape_io_base.hpp  tape_operation.hpp  tape_reader.hpp  tape_utility.hpp  tape_writer.hpp
include/star-tape/tape_io/: tape_bzip2_stream.hpp  tape_file.hpp  tape_gzip_stream.hpp  tape_stream.hpp
src/star-tape/: tape_archive.cpp  tape_convenience.cpp  tape_entry.cpp  tape_file_proxy.cpp  tape_header.cpp  tape_index.cpp  tape_operation.cpp  tape_writer.cpp
src/star-tape/tape_io/: tape_bzip2_stream.cpp  tape_file.cpp  tape_gzip_stream.cpp  tape_stream.cpp
tape_io/: tape_bzip2_stream.cpp  tape_bzip2_stream.hpp  tape_file.cpp  tape_file.hpp  tape_gzip_stream.cpp  tape_gzip_stream.hpp  tape_stream.cpp  tape_stream.hpp
